# rpg_dvs_ros

./: README.md
doc/: README.md
doc/cal_example/: 2015-12-22-00-53-33-eDVS128-_dev_ttyUSB0.yaml  2015-12-22-00-53-33-eDVS128-_dev_ttyUSB1.yaml
doc/scripts/: distortion.m  gen_toc.rb  patterns.m  prepare-pdf.md
dvs_calibration/include/dvs_calibration/: dvs_calibration.h  mono_dvs_calibration.h  stereo_dvs_calibration.h  transition_map.h
dvs_calibration/launch/: dvs_intrinsic.launch  intrinsic.launch  intrinsic_edvs.launch  intrinsic_edvs_usb1.launch  pattern_picker_stereo.launch  stereo_edvs.launch
dvs_calibration/scripts/: pick.py
dvs_calibration/src/: board_detection.cpp  dvs_calibration.cpp  mono_dvs_calibration.cpp  stereo_dvs_calibration.cpp  transition_map.cpp
dvs_driver/include/dvs_driver/: dvs_driver.h
dvs_msgs/msg/: ImageObjectPoints.msg  Point2f.msg  Point3f.msg
dvs_renderer/: CMakeLists.txt
dvs_renderer/include/dvs_renderer/: renderer.h
dvs_renderer/launch/: debug.launch  dvs_mono.launch
dvs_renderer/src/: renderer.cpp
dvs_ros_driver/: CMakeLists.txt  package.xml
dvs_ros_driver/include/dvs_ros_driver/: driver.h
dvs_ros_driver/launch/: edvs-stereo.launch
dvs_ros_driver/src/: driver.cpp
edvs_driver/: 89-edvs.rules  CMakeLists.txt  install.sh  package.xml
edvs_driver/include/edvs_driver/: Edvs.h  edvs_driver.h
edvs_driver/src/: edvs_driver.cpp
edvs_ros_driver/: CMakeLists.txt  package.xml
edvs_ros_driver/cfg/: EDVS_ROS_Driver.cfg
edvs_ros_driver/include/edvs_ros_driver/: driver.h  driver_nodelet.h
edvs_ros_driver/launch/: edvs-mono.launch  edvs-stereo.launch  stereo-display.launch
edvs_ros_driver/src/: driver.cpp  driver_node.cpp  driver_nodelet.cpp
utils/: plot.py  plot3d.py
