<?xml version="1.0"?>
<package>
  <name>edvs_driver</name>
  <version>0.0.0</version>
  <description>The edvs_driver package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
